Add placeholders system and use duration for set time in configuration.